--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,26 +100,93 @@ main {
 }
 
 .login-section {
-  background: rgba(
-    194,
-    194,
-    194,
-    0.6
-  ); /* Add semi-transparent background for readability */
+  background: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   color: white;
   text-align: center;
   width: 500px;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px); /* Frosted glass effect */
+  border: 1px solid rgba(255, 255, 255, 0.2); /* Subtle border */
+}
+
+/* Optional: Adding a slight inner glow effect */
+.login-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.1) 50%,
+    rgba(255, 255, 255, 0.05) 100%
+  );
+  border-radius: 15px;
+  z-index: -1;
 }
 
 .login-section {
   display: flex;
   flex-direction: column;
+  justify-content: baseline;
   align-items: center;
+  gap: 5px;
 }
-
-form {
+.login-section h1 {
+  font-family: "Baloo 2", cursive;
+  font-weight: 700;
+  font-size: 2em;
+  color: #ed5d56;
+}
+.login-section p,
+.login-section div p,
+.login-section div a {
+  font-size: 0.7em;
+  color: white;
+}
+.login-section div a {
+  color: #6354d9;
+}
+.login-section form {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
+}
+
+.login-section form input {
+  background-color: #f3f4f6;
+  width: 300px;
+  height: 25px;
+  border: none;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 0 5px 0 5px;
+  font-size: 0.7em;
+}
+
+.login-section form input::placeholder {
+  font-size: 0.7em;
+}
+
+.login-section form button {
+  width: 100%;
+  height: 25px;
+  font-size: 0.7em;
+  align-self: center;
+  background-color: #6354d9;
+  color: white;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #6354d9;
+  transition: 0.3s;
+}
+
+.login-section form button:hover {
+  background-color: #6454d9bd;
 }
