--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,27 @@ header ul li:focus-within a {
   color: #6354d9;
 }
 
+header button {
+  background: #6354d9;
+  border: none;
+  padding: 5px 25px;
+  border-radius: 35px;
+  font-size: 0.7rem;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  margin-left: auto;
+}
+header button:hover {
+  background: #6354d9;
+  transform: scale(1.05);
+}
+
+header button a {
+  text-decoration: none;
+  color: white;
+}
+
 .landing-page {
   background-image: url("https://images.unsplash.com/photo-1601030782669-7ea5e804b4d1?q=80&w=3131&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
