--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,12 @@ main {
 .login-signup-section form button:hover {
   background-color: #6454d9bd;
 }
+.alertEmailDiv p,
+.alertPwdDiv p {
+  color: red !important;
+  margin-bottom: 5px;
+  font-size: 0.7em !important;
+}
 
 /* Homepage */
 
